<resources xmlns:android="http://schemas.android.com/apk/res/android">

    
<string name="binerhint">Biner</string>
<string name="app_name">Base Konverter</string>
<string name="decimalhint">Decimal</string>
<string name="hexahint">HexaDecimal</string>
<string name="octalhint">Oktal</string>
<string name="credits">Credits</string>
<string name="creditvelue">Special Thaks to:\n1. walangsuper\n2. kokakokbrot(eka ms)\n3. kucengaer (Rizky S) </string>
<string name="about">About</string>
<string name="penjelasan">untuk konversi tekan enter</string>
<string name="aboutvalue">this application is\nBaseKonverter version 1.0.1\ncreated by kucengapi\ntelegram akun @kucengapi\nor email \u003c yujimaarif.ym@gmail.com \u003e</string>

</resources>
